--- a/lib/menu.css
+++ b/lib/menu.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 header{
-    background-color: #858585;  
+    background-color: #264c7e;  
 }
 
 /** Class styling **/
@@ -46,7 +46,7 @@ header{
 .mobileNavMenu li{
     width: 100%;
     height: 35px;
-    background-color: #433c3c;
+    background-color: #5a637f;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,7 +70,7 @@ header{
 .navLink{
     text-decoration: none;
     transition: 0.4s;
-    color: #000000;
+    color: #ffffff;
 }
 .navLink:hover{
     color: #00b7ff;
@@ -91,7 +91,7 @@ header{
     }
 
     .mobileNavMenu.isActive{    
-        background-color: #686868;
+        background-color: #8c9cb0;
         display: flex;
         flex-direction: column;
 
