--- a/lib/menu.css
+++ b/lib/menu.css
@@ -56,6 +56,7 @@ header{
     display: flex;
     align-items: center;
     padding: 15px;
+    padding-left: 30px;
 }
 .navMenu{
     position: absolute;
