--- a/events/lib/events.css
+++ b/events/lib/events.css
@@ -3,3 +3,50 @@
     max-width: 900px;
     margin: 30px auto 0px auto;
 }
+.event{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.eventHeading{
+    /** Typography **/
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.eventImage{
+    display: block;
+    width: 100%;
+}
+.eventImageContainer{
+    width: 100%;
+    max-width: 400px;
+}
+.eventInfoAndImageContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.eventInfoContainer{
+    /** Typography **/
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+.headingSection{
+    width: 100%;
+    height: 70px;
+    background-color: #7ebcf9;
+    /** make the heading in the center*/
+    display: flex;
+    align-items: center;
+}
+
+.heading{
+    /** matches the layout with the container */
+    width: 90%;
+    max-width: 900px;
+    margin: 0 auto;
+
+}
+
