--- a/lib/menu.css
+++ b/lib/menu.css
@@ -46,7 +46,7 @@ header{
 .mobileNavMenu li{
     width: 100%;
     height: 35px;
-    background-color: #5a637f;
+    background-color: #265799;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,9 +95,9 @@ header{
         background-color: #8c9cb0;
         display: flex;
         flex-direction: column;
-
+        
         gap: 10px;
-        padding: 3px;
+        padding: 10px 3px;
     }
 
 
