--- a/lib/index.css
+++ b/lib/index.css
@@ -17,7 +17,7 @@ footer a:hover{
 .container{
     width: 90%;
     max-width: 900px;
-    margin: 30px auto 50px auto;
+    margin: 30px auto 10vh auto;
 }
 
 .description{
