Fix variable image for members

--- a/members/lib/members.css
+++ b/members/lib/members.css
@@ -41,7 +41,12 @@
         flex-direction: column;
         justify-content: flex-end;
     }
+    .memberImage{
+        display: block;
+        width:100%;
+        object-fit: contain;
+    }
     .memberImageContainer{
-        width: 200px;
+        max-width: 300px;
     }
 }
