--- a/members/lib/members.css
+++ b/members/lib/members.css
@@ -16,6 +16,7 @@
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     font-size: 18px;
+    font-style: italic;
 }
 .memberImage{
     display: block;
