--- a/lib/menu.css
+++ b/lib/menu.css
@@ -46,7 +46,7 @@ header{
 .mobileNavMenu li{
     width: 100%;
     height: 35px;
-    background-color: #265799;
+    background-color: #47526e;
     display: flex;
     justify-content: center;
     align-items: center;
