--- a/lib/index.css
+++ b/lib/index.css
@@ -1,7 +1,7 @@
 footer{
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 30px;
+    height:30px;
     bottom: 0;
     /* centers the text */
     display: flex;
