Fix memberImage being different sizes

--- a/members/lib/members.css
+++ b/members/lib/members.css
@@ -48,6 +48,7 @@
         object-fit: contain;
     }
     .memberImageContainer{
-        max-width: 300px;
+        width: 300px;
+        min-width: 300px;
     }
 }
