--- a/lib/headingSection.css
+++ b/lib/headingSection.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 70px;
     background-color: #7ebcf9;
+    color: #1b4287;
     /** make the heading in the center*/
     display: flex;
     align-items: center;
