--- a/events/lib/events.css
+++ b/events/lib/events.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-top: 20px;
+    margin-bottom: 30px;
 }
 .eventHeading{
     /** Typography **/
