--- a/memories/lib/memories.css
+++ b/memories/lib/memories.css
@@ -1,18 +1,17 @@
 .container{
     width: 90%;
     max-width: 900px;
-    margin: 0 auto;
-    margin-top: 15px;
+    margin: 30px auto;
 }
+
 .eventImage{
     display: block;
     width:100%;
+    height:100%;
+    object-fit:cover;
 }
-.eventCollectionHeading{
-    font-family: 'Dancing Script', cursive;
-    font-weight: 700;
-    font-size: 40px;
-    color: #3e6172
+.eventImageContainer{
+    max-height:400px;
 }
 .gridContainer{
     display: grid;
