--- a/memories/lib/memories.css
+++ b/memories/lib/memories.css
@@ -8,6 +8,7 @@
     display: block;
     width:100%;
     height:100%;
+    background-color: rgb(123, 123, 123);
     object-fit:cover;
 }
 .eventImageContainer{
